Segundo commit - laboratorio06 - ejercicio06

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <ul>
                 <!--aria-current="page" agregado para mejorar accesibilidad, indicando la página actual.Es algo extra, normalemente lo usan los discapacitados-->
                 <li><a href="index.html" aria-current="page">Ir a la página de Inicio</a></li>
-                <li><a href="registro.html">Ir a la página de registro</a></li>
+                <li><a href="registro.html">Ir al Formulario de Registro</a></li>
+                <li><a href="lenguajes.html">Ir al Formulario de Lenguajes</a></li>
             </ul>
         </nav>
     </header>
