--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>Registro al boletín de noticias</title>
 </head>
 <body>
     <header>
@@ -12,7 +12,8 @@
             <ul>
                 <li><a href="index.html">Ir a la página de Inicio</a></li>
                 <!--aria-current="page" agregado para mejorar accesibilidad, indicando la página actual.Es algo extra, normalemente lo usan los discapacitados-->
-                <li><a href="registro.html" aria-current="page">Ir a la página de registro</a></li>
+                <li><a href="registro.html" aria-current="page">Ir al Formulario de Registro</a></li>
+                <li><a href="lenguajes.html">Ir al Formulario de Lenguajes</a></li>
             </ul>
         </nav>
     </header>
