Tercer commit - laboratorio06 - ejercicio08

--- a/registro.html
+++ b/registro.html
@@ -14,6 +14,7 @@
                 <!--aria-current="page" agregado para mejorar accesibilidad, indicando la página actual.Es algo extra, normalemente lo usan los discapacitados-->
                 <li><a href="registro.html" aria-current="page">Ir al Formulario de Registro</a></li>
                 <li><a href="lenguajes.html">Ir al Formulario de Lenguajes</a></li>
+                <li><a href="validacion.html">Ir Validación</a></li>
             </ul>
         </nav>
     </header>
