--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html" aria-current="page">Ir a la página de Inicio</a></li>
                 <li><a href="registro.html">Ir al Formulario de Registro</a></li>
                 <li><a href="lenguajes.html">Ir al Formulario de Lenguajes</a></li>
+                <li><a href="validacion.html">Ir Validación</a></li>
             </ul>
         </nav>
     </header>
