--- a/lenguajes.html
+++ b/lenguajes.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">Ir a la página de Inicio</a></li>
                 <li><a href="registro.html">Ir al Formulario de Registro</a></li>
                 <li><a href="lenguajes.html" aria-current="page">Ir al Formulario de Lenguajes</a></li>
+                <li><a href="validacion.html">Ir Validación</a></li>
             </ul>
         </nav>
     </header>
