Cuarto commit - laboratorio06 - ejercicio10

--- a/registro.html
+++ b/registro.html
@@ -15,6 +15,7 @@
                 <li><a href="registro.html" aria-current="page">Ir al Formulario de Registro</a></li>
                 <li><a href="lenguajes.html">Ir al Formulario de Lenguajes</a></li>
                 <li><a href="validacion.html">Ir Validación</a></li>
+                <li><a href="curso.html">Ir al Formulario de Inscripción a un Curso</a></li>
             </ul>
         </nav>
     </header>
