--- a/validacion.html
+++ b/validacion.html
@@ -14,6 +14,7 @@
                 <li><a href="registro.html">Ir al Formulario de Registro</a></li>
                 <li><a href="lenguajes.html">Ir al Formulario de Lenguajes</a></li>
                 <li><a href="validacion.html" aria-current="page">Ir Validación</a></li>
+                <li><a href="curso.html">Ir al Formulario de Inscripción a un Curso</a></li>
             </ul>
         </nav>
     </header>
